tests/checker/good/shadowwarn1.scilla
scilla_version 0

contract ShadowWarn1 (p1 : Uint32)

transition Foo (p1 : String)

end
